...
                    <navigationItem key="navigationItem" id="zZQ-20-1Ec">
                        <leftBarButtonItems>
                            <barButtonItem title="Options" image="gear" catalog="system" id="fje-qN-BIw">
                                <connections>
                                    <segue destination="YEz-r8-dLK" kind="presentation" identifier="optionsSegue" modalPresentationStyle="automatic" id="CtJ-KX-J4i"/>
...
            <objects>
                <navigationController storyboardIdentifier="NightNavigationController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="xvP-13-Tas" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Night" image="moon.stars" catalog="system" selectedImage="moon.stars.fill" id="DhA-ze-Kq2"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="sPG-E9-x2x">
                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
...
                                                            <rect key="frame" x="0.0" y="1" width="294" height="40"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Morning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstr
                                                                    <rect key="frame" x="0.0" y="0.0" width="294" height="20.333333333333332"/>
                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
...
                                                            <rect key="frame" x="0.0" y="1" width="294" height="40"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Afternoon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoCons
                                                                    <rect key="frame" x="0.0" y="0.0" width="294" height="20.333333333333332"/>
                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
...
                                                            <rect key="frame" x="0.0" y="1" width="294" height="40"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Evening" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstr
                                                                    <rect key="frame" x="0.0" y="0.0" width="294" height="20.333333333333332"/>
                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="fZn-Fk-lRL"/>
                    <connections>
                        <outlet property="afternoonSubLabel" destination="TUo-1L-76t" id="72X-gF-7Mv"/>
...
