...
//    static let fetchedReceiptMessage = "Successfully fetched new receipt."
//    static let receiptFailed = "Refresh Failed"
//    static let receiptFailedMessage = "Failed to refresh receipt. Please contact support. Error: "

    // MARK: - User Interface

    static let allDay = "All Day"
    enum TimePeriod: String {
        case morning, afternoon, evening, night
    }

    // MARK: - Notification Alerts

...
