...

    @objc func displayResetAction() {
        let alert = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        alert.addAction(UIAlertAction(title: "Reset Times to Default", style: .destructive, handler: { _ in
            self.resetTimes()
        }))
        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
        present(alert, animated: true, completion: nil)
    }

    private func resetTimes() {
        DispatchQueue(label: realmDispatchQueueLabel).sync {
            autoreleasepool {
...
